--- a/index.html
+++ b/index.html
@@ -43,26 +43,22 @@
   </main>
 
 
-
-
-
-
   <div class="container1">
     <div class="box1">
-    <h3>Mobile Learning</h3>
+    <!-- <h3>Mobile Learning</h3> -->
     </div>
 
     <div class="box2">
-    <h3>Instructional Design</h3>
+  <!--  <h3>Instructional Design</h3>
     <li> Museum Hunt</li>
-    <li> Prototype + Learning Design <li>
+    <li> Prototype + Learning Design <li>-->
 
     </div>
   </div>
 
   <div class="container2">
     <div class="box3">
-      <h3> Art Education</h3>
+    <h3> Art Education</h3> 
 
       </div>
 
