--- a/index.html
+++ b/index.html
@@ -36,29 +36,41 @@
 
 
 <main id="home">
-
+<div class="projects">
   <p class="heading2">
-    A passionate UX & UI Desinger, Instructional Designer and Web Developer
+    A passionate UX & UI Designer, Instructional Designer and Web Developer
     </p>
-  </main>
+
 
 
   <div class="container1">
     <div class="box1">
+
+      <!-- <img src="./agogos-1.jpg" alt=""> -->
     <!-- <h3>Mobile Learning</h3> -->
-    </div>
+  <div style="display: none;">
+    
+      <p class="intro">
+      Empower New Instructional Designer </p>
+      <p class="skills">
+        Featured skills: Develop personas and wireframes,Prototype in Figma </p>
+   </div>
+      </div>
 
     <div class="box2">
-  <!--  <h3>Instructional Design</h3>
-    <li> Museum Hunt</li>
-    <li> Prototype + Learning Design <li>-->
+    <div style="display: none;">
+        <p class="intro">
+        Contextualizing Museum Learning </p>
+        <p class="skills">
+          Featured skills: Marketing competitive analysis; Develop storyboard and wireframes,Prototype in Figma </p>
 
     </div>
   </div>
+</div>
 
   <div class="container2">
     <div class="box3">
-    <h3> Art Education</h3> 
+    <h3> Art Education</h3>
 
       </div>
 
@@ -67,7 +79,19 @@
       </div>
 
     </div>
+    </div>
 
+
+  <div class="navbar hide">
+    <a href="">Projects</a>
+    <br>
+    <a href="">About</a>
+  </div>
+    </main>
 <script src="main.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 
 </body>
