zz edit hover effect fixed

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <p>
               Featured skills: Develop personas and wireframes,Prototype in Figma </p>
           </div>
+          <div class="jumbotron">
+          </div>
         </div>
 
         <div class="box2">
