--- a/index.html
+++ b/index.html
@@ -38,47 +38,27 @@
 <main id="home">
 <div class="projects">
   <p class="heading2">
-    A passionate UX & UI Designer, Instructional Designer and Web Developer
-    </p>
+    A passionate UX & UI Designer, Instructional Designer and Web Developer </p>
 
-<<<<<<< Updated upstream
+        <div class="container1">
+              <div class="box1">
 
-
-  <div class="container1">
-    <div class="box1">
-
-      <!-- <img src="./agogos-1.jpg" alt=""> -->
-    <!-- <h3>Mobile Learning</h3> -->
-  <div style="display: none;">
-    
-      <p class="intro">
-      Empower New Instructional Designer </p>
-      <p class="skills">
-        Featured skills: Develop personas and wireframes,Prototype in Figma </p>
-   </div>
-=======
-    <div class="container1">
-
-
-          <div class="box1">
-
-          <div class="intro">
-            <p>
-              Empower New Instructional Designer </p>
-            <p>
-              Featured skills: Develop personas and wireframes,Prototype in Figma </p>
+              <!-- <img src="./agogos-1.jpg" alt=""> -->
+              <!-- <h3>Mobile Learning</h3> -->
+            <a href="mobile.html">
+              <div class="intro">
+                <p class="description">
+                  Empower New Instructional Designer </p>
+                <p>
+                  Featured skills: Develop personas and wireframes,Prototype in Figma </p>
+              </div>
+            </a>
           </div>
-        </a>
-
-
-        </div>
-
-
 
 
         <div class="box2">
-          <div class="skills">
-              Contextualizing Museum Learning
+          <div class="intro2">
+              <p> Contextualizing Museum Learning
             </p>
             <p >
               Featured skills: Marketing competitive analysis; Develop storyboard and wireframes,Prototype in Figma
@@ -86,8 +66,6 @@
 
           </div>
         </div>
-
->>>>>>> Stashed changes
       </div>
 
     <div class="box2">
