--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.google.com/specimen/Poppins" rel="stylesheet">
-  <title>Document</title>
+  <title>Main</title>
 
   <link rel="stylesheet" href="custom.css">
 
@@ -68,16 +68,16 @@
         </div>
       </div>
 
-    <div class="box2">
+    <!-- <div class="box2">
     <div style="display: none;">
         <p class="intro">
         Contextualizing Museum Learning </p>
         <p class="skills">
           Featured skills: Marketing competitive analysis; Develop storyboard and wireframes,Prototype in Figma </p>
 
-    </div>
-  </div>
-</div>
+    </div> -->
+
+
 
   <div class="container2">
     <div class="box3">
@@ -91,6 +91,8 @@
 
     </div>
     </div>
+
+</div>
 
 
   <div class="navbar hide">
