--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
 
 
         <div class="box2">
+          <a href="museum.html">
           <div class="intro2">
-              <p> Contextualizing Museum Learning
+                <p class="description"> Contextualizing Museum Learning
             </p>
             <p >
               Featured skills: Marketing competitive analysis; Develop storyboard and wireframes,Prototype in Figma
             </p>
-
+          </a>
           </div>
         </div>
       </div>
