--- a/mobile.html
+++ b/mobile.html
@@ -45,7 +45,9 @@
 
 </nav>
 
+  <div class="projects">
 <div class="all">
+
 
 <div class="container">
 <div>
@@ -59,17 +61,15 @@
 <p> New Instructional Design professionals who create eLearning courses.</p>
 </div><br>
 
-<h2> Learner Personas </h2>
 
-</div>
 
-  <div class="container cycle-slideshow" data-cycle-fx="scrollHorz"
+<h2> <center>Learner Personas </center></h2>
+
+  <div class=" cycle-slideshow" data-cycle-fx="scrollHorz"
     data-cycle-slides="div"
     data-cycle-timeout="0"
     data-cycle-prev="#prev"
     data-cycle-next="#next">
-
-
 
 
     <div>
@@ -99,23 +99,24 @@
         </center>
   </p>
 
-  </div>
+</div>
+<!-- </div>
 
-<div class="container">
-
+<div class="container"> -->
   <h2> Goal of App </h2>
   <p> Due to the rapid growth of the eLearning industry and the various ways that people enter the field of e-Learning, there are inconsistencies in their knowledge of the process of creating e-Learning courses in general. Many people with different backgrounds find their way into the space of e-Learning: Some people are new to the field such as new graduates of instructional design programs; some people are experts in the field who have transitioned into a position of developing e-Learning course; and other fields such as Learning and Development and Human Resources that are in charge of orientation and onboarding are moving into the field of e-Learning to train their new recruits.  The Agogos iPad app will help all of these nascent eLearning professionals learn these procedures of creating an e-Learning course.
   </p>
 
 
-
+  <center>
 <h2> Storyboard </h2>
 <img id="storyboard" src="storyboard.jpg" >
 
-</div><br>
 
-<div class="container1">
-  <center>
+
+
+
+
   <h2>  Wireframe </h2>
     <img id="wireframes" src="wireframe1.jpg" >
     <img id="wireframes" src="wireframe2.jpg" >
@@ -123,28 +124,44 @@
     <img id="wireframes" src="wireframe4.jpg" >
     <img id="wireframes" src="wireframe5.jpg" >
     <img id="wireframes" src="wireframe6.jpg" >
-  </center>
-</div>
 
-<div>
-  <center>
+
+
+
+
   <h2> Prototype </h2>
 
   <iframe src="https://360.articulate.com/review/content/3e5b4d79-afd0-46da-8c73-82ee2914bfcc/review
 " width="700" height="500"></iframe>
 
-  </center>
-  </div>
 
 
-<div>
-  <center>
+
     <h2> Video </h2>
 <iframe class="youtube-video" width="700" height="394"
 src="http://www.youtube.com/embed/asFa5wLkW5M "
 frameborder="0" allowfullscreen></iframe>
 </center>
+
+
+<div class="choice">
+<center>
+<a href="#">iPad App</a>
+<a href="#">Mobile App</a>
+<a href="#">Art Program</a>
+
+</center>
 </div>
+
+</div>
+
+<div class="navbar hide">
+  <a href="">Projects</a>
+  <br>
+  <a href="">About</a>
+</div>
+
+<script src="main.js"></script>
 
   </body>
 
