--- a/mobile.html
+++ b/mobile.html
@@ -46,10 +46,34 @@
 </nav>
 
   <div class="projects">
-<div class="all">
+
+ <!-- <div class="container1">
+
+ </div> -->
+
+ <main>
+   <div class="hero">
+     <h1>An iPad App</h1>
+
+     <p class="header"> that would guide 30,000+ new instructional designers to develop online courses </p>
+
+     <img src="agogos-1.jpg" />
+      <div class="bar"></div>
+   </div>
+
+ </main>
+
 
 
 <div class="container">
+
+  <!-- <div>
+ <center>
+    <img src="agogos-1.jpg" width="768px" height="auto">
+ </center>
+    </div> -->
+
+
 <div>
 <h2> Problem </h2>
 <p> Due to the rapid growth of the eLearning industry and the various ways that people enter the field of e-Learning, there are inconsistencies in their knowledge of the process of creating e-Learning courses in general. Many people with different backgrounds find their way into the space of e-Learning: Some people are new to the field such as new graduates of instructional design programs; some people are experts in the field who have transitioned into a position of developing e-Learning course; and other fields such as Learning and Development and Human Resources that are in charge of orientation and onboarding are moving into the field of e-Learning to train their new recruits.  The Agogos iPad app will help all of these nascent eLearning professionals learn these procedures of creating an e-Learning course.
@@ -167,8 +191,8 @@ frameborder="0" allowfullscreen></iframe>
 
 <div class="choice">
 <center>
-<a href="#">iPad App</a>
-<a href="#">Mobile App</a>
+<a href="mobile.html">iPad App</a>
+<a href="museum.html">Mobile App</a>
 <a href="#">Art Program</a>
 
 </center>
