--- a/museum.html
+++ b/museum.html
@@ -49,7 +49,20 @@
 <div class="all">
 
 
+  <main>
+    <div class="hero">
+      <h1>A Mobile App</h1>
+      <p class="header">that would help 150,000+ teachers to develop contextualized museum lessons</p>
+      <img src="museum-1.jpg" />
+       <div class="bar"></div>
+    </div>
+
+  </main>
+
 <div class="container">
+
+
+
 <div>
 <h2> Problem </h2>
 <p> Every classroom is unique - in the types of students in the class, the lesson that they’re learning, and in what they’re interested in learning more about. When going to the museum, each trip should be catered to support and contextualize exactly what that class is learning at that moment in time. More often than not, however, trips to the museum are not facilitated in a way that provides students a bridge to formal learning. These trips are either guided tours by a museum educator, or unstructured time for students to explore the exhibits on their own. This results in students having fun in an environment that breaks up the monotony of sitting in class every day, but does not actually allow them to deeply relate what they’re learning in the museum to the concepts being covered in class.
@@ -101,15 +114,17 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
     <h2> Evaluation </h2>
 
 </center>
-</div>
+
 
 <div class="choice">
 <center>
-<a href="#">iPad App</a>
-<a href="#">Mobile App</a>
+<a href="mobile.html">iPad App</a>
+<a href="museum.html">Mobile App</a>
 <a href="#">Art Program</a>
 
 </center>
+</div>
+
 </div>
 
 </div>
