--- a/mobile.html
+++ b/mobile.html
@@ -47,9 +47,7 @@
 
   <div class="projects">
 
- <!-- <div class="container1">
 
- </div> -->
 
  <main>
    <div class="hero">
@@ -67,11 +65,6 @@
 
 <div class="container">
 
-  <!-- <div>
- <center>
-    <img src="agogos-1.jpg" width="768px" height="auto">
- </center>
-    </div> -->
 
 
 <div>
@@ -89,7 +82,7 @@
 
 <h2> <center>Learner Personas </center></h2>
 
-
+<div id="box1">
 
   <div class="cycle-slideshow"
     data-cycle-slides="nav2"
@@ -106,9 +99,8 @@
       <img id="personas" src="Jessica.jpeg">
       <p><center><i class="fas fa-quote-left"></i> <span> Jessica </span><i class="fas fa-quote-right"></i></center></p>
       <p> Jessica just celebrated her 23rd birthday and is about to finish her last semester in the Masters program in Instructional Design at Teachers College. She landed an internship that coincides with her Integrative Project perfectly: a project lead in the Training and Development department of Company X. One of the major goals of the role will be to update existing eLearning courses to make them look and feel more current, both visually and content-wise. Specifically, Jessica is tasked to begin with a redesign their “WHY STEM?” course which aims to promote students to enter the STEM field. Although Jessica is confident that she can bring new ideas into this redesign, she is concerned that she will meet resistance from long time employees and/or trainers. Jessica has the educational theory background but she lacks exposure to Articulate and other relevant software, so she is unsure of what kind of design will be best accepted. Jessica wants to make the course look relevant and appealing to her audience through visual and interactive design while making her supervisor happy but she isn’t sure of best practices and she wants to make a good impression (of course!). Jessica is hoping to find an app where she can show the process of her thoughts to her supervisor in a clear way. She learns about Agogos from some of her classmates, who have just released a beta version into the market. </p>
+</div>
 
-
-  </div>
   </nav2>
 
   <nav2 >
@@ -141,9 +133,13 @@
          <a href="#" id="next">&gt;</a>
          <div class="example-pager"></div>
 
-
+</div>
 
 </div>
+
+
+
+
 
 <div>
   <h2> Goal of App </h2>
