--- a/museum.html
+++ b/museum.html
@@ -53,7 +53,7 @@
     <div class="hero">
       <h1>A Mobile App</h1>
       <p class="header">that would help 150,000+ teachers to develop contextualized museum lessons</p>
-      <img src="museum-1.jpg" />
+      <img src="museum-1.jpg">
        <div class="bar"></div>
     </div>
 
@@ -70,9 +70,11 @@ Given the amount of time and effort that it would take for a museum educator to 
 </p>
 </div><br>
 
-<div>
+<div id="box1">
 <h2> Target Audience </h2>
+<img id="teachers" src="teacher.jpeg">
 <p> The target audience for this project are teachers grades from 6th to 8th grade. While other users can fall outside of this grade range, we have decided to focus on this demographic where students are still gaining foundational knowledge; whereas pre-6th grade students are still learning basic human skills (reading and writing), and post-8th grade students are learning in-depth concepts. </p>
+
 </div><br>
 
 
@@ -92,6 +94,7 @@ Additionally, some apps provide access to experts during a museum visit. The ask
 </p>
 
 <h2> Learning Theory </h2>
+<img id="theory" src="theory2.jpeg">
 <p>Our approach to designing this app draws primarily on information seeking behavior theories. In information seeking, learners have decided to gather information about a given topic, as a response to the identification of a need for said information. It is an active search for information to be able to answer a given question or set of questions.
 Wilson (2006) discusses his 2002 model of information seeking as the “idea of a problem solving process to which recurrent searches for information are connected as information problems are experienced in the process of solving the more general research problem” (p. 28) He puts forward the below model, which demonstrates the progression from problem identification to solution statement, facilitated by the resolution of uncertainty through information seeking. Our idea is that teachers identify that students are unable to connect museum field trips and formal learning as a problem, they will seek information about the exhibits through our app, and will resolve this through the creation of museum scavenger hunts.
 </p>
