--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.google.com/specimen/Poppins" rel="stylesheet">
-    <link href="https://fonts.google.com/specimen/Poppins" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Lato" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Muli" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Open+Sans" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Arvo" rel="stylesheet">
+
+
+
+
   <title>Mobile</title>
 
 
@@ -68,21 +76,23 @@
 
 
 <div>
-<h2> Problem </h2>
+  <h2> Analysis </h2>
+<h3> Problem </h3>
 <p> Due to the rapid growth of the eLearning industry and the various ways that people enter the field of e-Learning, there are inconsistencies in their knowledge of the process of creating e-Learning courses in general. Many people with different backgrounds find their way into the space of e-Learning: Some people are new to the field such as new graduates of instructional design programs; some people are experts in the field who have transitioned into a position of developing e-Learning course; and other fields such as Learning and Development and Human Resources that are in charge of orientation and onboarding are moving into the field of e-Learning to train their new recruits.  The Agogos iPad app will help all of these nascent eLearning professionals learn these procedures of creating an e-Learning course.
 </p>
 </div><br>
 
 <div>
-<h2> Target Audience </h2>
+<h3> Target Audience </h3>
 <p> New Instructional Design professionals who create eLearning courses.</p>
 </div><br>
 
 
 
-<h2> <center>Learner Personas </center></h2>
 
+  <h3> Learner Personas </h3>
 <div id="box1">
+
 
   <div class="cycle-slideshow"
     data-cycle-slides="nav2"
@@ -93,7 +103,7 @@
     data-cycle-pager-event="mouseover"
     >
 
-    <nav2 >
+    <nav2>
     <div>
 
       <img id="personas" src="Jessica.jpeg">
@@ -125,9 +135,6 @@
 
 
 
-
-
-
        <a href="#" id="prev">&lt;</a>
 
          <a href="#" id="next">&gt;</a>
@@ -135,14 +142,14 @@
 
 </div>
 
-</div>
+</div><br>
 
 
 
 
 
 <div>
-  <h2> Goal of App </h2>
+  <h3> Goal of App </h3>
   <p> Due to the rapid growth of the eLearning industry and the various ways that people enter the field of e-Learning, there are inconsistencies in their knowledge of the process of creating e-Learning courses in general. Many people with different backgrounds find their way into the space of e-Learning: Some people are new to the field such as new graduates of instructional design programs; some people are experts in the field who have transitioned into a position of developing e-Learning course; and other fields such as Learning and Development and Human Resources that are in charge of orientation and onboarding are moving into the field of e-Learning to train their new recruits.  The Agogos iPad app will help all of these nascent eLearning professionals learn these procedures of creating an e-Learning course.
   </p>
 
@@ -151,14 +158,16 @@
   <center>
 
   <div>
-<h2> Storyboard </h2>
+
+  <h2> Design </h2>
+<h3> Storyboard </h3>
 <img id="storyboard" src="storyboard.jpg" >
 
 </div>
 
 
 <div>
-  <h2>  Wireframe </h2>
+  <h3>  Wireframe </h3>
     <img id="wireframes" src="wireframe1.jpg" >
     <img id="wireframes" src="wireframe2.jpg" >
     <img id="wireframes" src="wireframe3.jpg" >
@@ -170,23 +179,61 @@
 
 
 
-  <h2> Prototype </h2>
+  <h3> Prototype </h3>
 
   <iframe src="https://360.articulate.com/review/content/3e5b4d79-afd0-46da-8c73-82ee2914bfcc/review
 " width="700" height="500"></iframe>
 
 
 
-
-    <h2> Video </h2>
+<h2> Outcome </h2>
+    <h3> User Experience Journey </h3>
 <iframe class="youtube-video" width="700" height="394"
 src="http://www.youtube.com/embed/asFa5wLkW5M "
 frameborder="0" allowfullscreen></iframe>
 </center>
 
+     <h3> Test Report </h3>
+
+<p> For the written evaluation, we surveyed 16 people from various background as can be seen in the table above. Overall, our evaluation result is acceptable considering the time and the limitation of the prototype. People enjoyed the concept of our app and our biggest feedback was the visual design of the app. Feedback included comments such as having things pop out more for easier navigation, provide clearer objectives of the app at the beginning of the app. Some of the feedback referenced things we were already aware of in this beta version such as the development tool and setting bar not working. Some feedback we received were due to constraints of the prototype such as the drawing section being unavailable.
+</p> <br>
+
+<p> Respondents’ Profession
+  <li>Organization Development Specialist</li>
+  <li>Learning & Development Executive</li>
+  <li>Senior Organization Development Analyst</li>
+  <li>Senior Learning & Development Coordinator</li>
+  <li>Data Analyst and Digital Trainee</li>
+  <li>Undergrad Student</li>
+  </p>
+
+
+
+     <div id="box2">
+       <div class="cycle-slideshow"
+    data-cycle-fx=scrollHorz
+    data-cycle-timeout=0
+    data-cycle-pager="#adv-custom-pager"
+    data-cycle-pager-template="<a href='#'><img src='{{src}}' width=20 height=15></a>"
+    >
+      <img id="report" src="report1.jpeg">
+      <img id="report" src="report2.jpeg">
+      <img id="report" src="report3.jpeg">
+      <img id="report" src="report4.jpeg">
+</div>
+<!-- empty element for pager links -->
+<div id=adv-custom-pager class="center external"></div>
+
+     </div>
+
+     <h3> Future</h3>
+
+<p> For future iterations, we would improve our app by including the feedback that we received from our survey. Firstly, we would make the visual design of our app more cohesive. Although our first impression is a roadmap with trees, the rest of our app consists of puzzle pieces. We would pick something that is a cohesive design that better ties into the idea of “instructional design”. Secondly, we would work to expand the community and collaborative aspect of the app. To do this, we could go in two different routes. The first route is to improve on our current version of the community page and make it easily accessible within the app. The second route is to make the community page its own app. By taking the community page and making it its own app, we can then have one app that focuses on the learning aspect of instructional design and the second app focuses on the social aspect where users can share their work.
+</p><br>
 
 <div class="choice">
 <center>
+<a href="index.html">All</a>
 <a href="mobile.html">iPad App</a>
 <a href="museum.html">Mobile App</a>
 <a href="#">Art Program</a>
