--- a/museum.html
+++ b/museum.html
@@ -64,21 +64,23 @@
 
 
 <div>
-<h2> Problem </h2>
+<h2> Analysis </h2>
+  <h3>Problem </h3>
 <p> Every classroom is unique - in the types of students in the class, the lesson that they’re learning, and in what they’re interested in learning more about. When going to the museum, each trip should be catered to support and contextualize exactly what that class is learning at that moment in time. More often than not, however, trips to the museum are not facilitated in a way that provides students a bridge to formal learning. These trips are either guided tours by a museum educator, or unstructured time for students to explore the exhibits on their own. This results in students having fun in an environment that breaks up the monotony of sitting in class every day, but does not actually allow them to deeply relate what they’re learning in the museum to the concepts being covered in class.
 Given the amount of time and effort that it would take for a museum educator to work with teachers in customizing the experience for each class, it is unreasonable to expect that museum educators would be able to develop individualized lessons for each class visiting the museum. The lack of resources allocated to connecting these two parties makes it difficult to create a learning experience that truly contextualizes the museum experience in terms of the work being done in the classroom.
 </p>
 </div><br>
 
+<h3> Target Audience </h3>
 <div id="box1">
-<h2> Target Audience </h2>
+
 <img id="teachers" src="teacher.jpeg">
 <p> The target audience for this project are teachers grades from 6th to 8th grade. While other users can fall outside of this grade range, we have decided to focus on this demographic where students are still gaining foundational knowledge; whereas pre-6th grade students are still learning basic human skills (reading and writing), and post-8th grade students are learning in-depth concepts. </p>
 
 </div><br>
 
 
-  <h2> Goal of App </h2>
+  <h3> Goal of App </h3>
   <p> The project aims to address the disconnect between formal classroom learning and informal learning that occurs during museum field trips. The goal is to provide a resource that allows them to easily contextualize museum artifacts in terms of what is being covered in the classroom at that time.<br>
 
 Objectives<br>
@@ -88,23 +90,25 @@ Objectives<br>
 
 </p>
 
-  <h2> Review of competing projects </h2>
+  <h3> Review of competing projects </h3>
   <p> Most museum apps include information about all exhibits, very broadly, and do not provide teachers the opportunity to select specific exhibits to focus on and situate these within the context of their curriculum at large. There are also apps that allow users to create their own tours, but they are lacking in that they do not provide students with the opportunity to engage with the exhibits beyond reading about them, and they do not provide space for discussion of the exhibits. For example, the Artlens app allows users to create their tour in the museum and discover what exhibits are nearby. <br>
 Additionally, some apps provide access to experts during a museum visit. The ask BKM app allows users to ask whatever questions during their visit to the museum, and educators and historians will give answers immediately. However, this feature does not provide much in the way of contextualizing the exhibits, beyond giving students access to a resource for answering questions that they are curious about.
 </p>
 
-<h2> Learning Theory </h2>
+<h3> Learning Theory </h3>
 <img id="theory" src="theory2.jpeg">
 <p>Our approach to designing this app draws primarily on information seeking behavior theories. In information seeking, learners have decided to gather information about a given topic, as a response to the identification of a need for said information. It is an active search for information to be able to answer a given question or set of questions.
 Wilson (2006) discusses his 2002 model of information seeking as the “idea of a problem solving process to which recurrent searches for information are connected as information problems are experienced in the process of solving the more general research problem” (p. 28) He puts forward the below model, which demonstrates the progression from problem identification to solution statement, facilitated by the resolution of uncertainty through information seeking. Our idea is that teachers identify that students are unable to connect museum field trips and formal learning as a problem, they will seek information about the exhibits through our app, and will resolve this through the creation of museum scavenger hunts.
 </p>
 
   <center>
-<h2> Storyboard </h2>
+
+<h2> Design </h2>
+<h3> Storyboard </h3>
 <img id="storyboard" src="storyboard2.jpg" >
 
 
-  <h2> Prototype </h2>
+  <h3> Prototype </h3>
 
 <iframe style="border: none;" width="800" height="450"
 
@@ -112,15 +116,16 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
 
 
 
-    <h2> Implementation </h2>
+    <h3> Implementation </h3>
 
-    <h2> Evaluation </h2>
+    <h3> Evaluation </h3>
 
 </center>
 
 
 <div class="choice">
 <center>
+<a href="index.html">All</a>
 <a href="mobile.html">iPad App</a>
 <a href="museum.html">Mobile App</a>
 <a href="#">Art Program</a>
