--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
               <div class="intro">
                 <p class="description">
                   Empower New Instructional Designer </p>
-                <p>
-                  Featured skills: Develop personas and wireframes,Prototype in Figma </p>
+                <p class="description2">
+                  <p id="skill" >
+                  Featured skills </p>
+                  Develop personas and wireframes<br>
+                  Prototype in Figma </p>
               </div>
             </a>
           </div>
@@ -61,15 +64,19 @@
           <div class="intro2">
                 <p class="description"> Contextualizing Museum Learning
             </p>
-            <p >
-              Featured skills: Marketing competitive analysis; Develop storyboard and wireframes,Prototype in Figma
+            <p class="description2">
+              <p id="skill" >
+              Featured skills </p>
+              Marketing competitive analysis<br>
+              Develop storyboard and wireframes<br>
+              Prototype in Figma
             </p>
           </a>
           </div>
         </div>
       </div>
 
-  
+
 
 
   <div class="container2">
