--- a/mobile.html
+++ b/mobile.html
@@ -31,7 +31,7 @@
 </head>
 
 
-<body>
+
 
 <nav>
   <div class="logo">
@@ -68,6 +68,20 @@
    </div>
 
  </main>
+
+ <!-- <body>
+
+   <div class="floating-menu">
+
+     <a href="/css/">CSS</a>
+     <a href="/html/">HTML</a>
+     <a href="/coldfusion/">ColdFusion</a>
+     <a href="/database/">Database</a>
+   </div>
+ </body> 
+
+
+
 
 
 
@@ -251,7 +265,7 @@ frameborder="0" allowfullscreen></iframe>
 
 <script src="main.js"></script>
 
-  </body>
+
 
 
   <script
