--- a/museum.html
+++ b/museum.html
@@ -104,9 +104,12 @@ Wilson (2006) discusses his 2002 model of information seeking as the “idea of 
   <center>
 
 <h2> Design </h2>
+
 <h3> Storyboard </h3>
 <img id="storyboard" src="storyboard2.jpg" >
 
+<h3> Information Architecture </h3>
+<img id="information" src="information2.jpeg" >
 
   <h3> Prototype </h3>
 
@@ -118,7 +121,57 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
 
     <h3> Implementation </h3>
 
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+
+<!-- The Timeline -->
+
+<ul class="timeline">
+
+	<!-- Item 1 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag"> Usability Testing</span>
+				<span class="time-wrapper"><span class="time">Phase 1</span></span>
+			</div>
+			<div class="desc">The first phase of usability testing will assess the effectiveness of our design. Three to five teachers and three to five students will have a field trip to the museum to test the prototype of our app. </div>
+		</div>
+	</li>
+
+	<!-- Item 2 -->
+	<li>
+		<div class="direction-l">
+			<div class="flag-wrapper">
+				<span class="flag">Pitch Presentation</span>
+				<span class="time-wrapper"><span class="time">Phase 2</span></span>
+			</div>
+			<div class="desc"> We will reach out the major museums that fit out design to advocate our app and ask if the museums can encourage more teachers to use it. </div>
+		</div>
+	</li>
+
+	<!-- Item 3 -->
+	<li>
+		<div class="direction-r">
+			<div class="flag-wrapper">
+				<span class="flag">Professional Webinar</span>
+				<span class="time-wrapper"><span class="time">Phase 3</span></span>
+			</div>
+			<div class="desc">In this session, we will introduce the importance of informal learning and how teachers can better incorporate museums in their teaching. In addition, we will teach them how to take advantage of our  app to design field trips in museums.
+</div>
+		</div>
+	</li>
+
+</ul>
+
+
     <h3> Evaluation </h3>
+    <p>The evaluation will be structured based on three parts, teachers' experience, students' experience, and delivery platform (for developer use).<br>
+      For the instructor, the app has its built-in function to collect data to support the learning environment better. The Exhibition Review page can help the instructor with ratings, review highlights, and reviews of the existing hunt route. Whether they chose to create their unique scavenger route or simply follow a success example, these will all be helpful information for the next user.<br>
+      For the students, a page full of collections they found in the museum will be a rewarding experience after the hunt, just like an honor wall, this is also the learning material that helps them review what they have learned in the hunt. The number of collection they have, how many times a student click a collection, what is a students' preference when choosing a scavenger hunt can also help an instructor when organizing a hunt.<br>
+
+</p>
+
+    <img id="storyboard" src="evaluation.jpeg" >
 
 </center>
 
