--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
   <nav>
     <div class="logo">
-        <h4> Yinjian Huang </h4>
+        <h4> <a href="index.html"> Yinjian Huang </a></h4>
       </div>
   <ul class="nav-link">
     <li>
-      <a href="#">Projects</a>
+      <a href="index.html">Projects</a>
       </li>
     <li>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       </li>
   </ul>
   <div class="burger">
@@ -81,12 +81,24 @@
 
   <div class="container2">
     <div class="box3">
-    <h3> Art Education</h3>
+      <a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">
+      <div class="intro3">
+            <p class="description"> Teaching in Art Museums
+        </p>
+        <p class="description2">
+          <p id="skill" >
+          Featured skills </p>
+          Develop dialogue plan<br>
+          Develop non-discursive activity<br>
+          Facilitate meaningful encounters between viewers and artworks
+        </p>
+      </a>
 
       </div>
+    </div>
 
     <div class="box4">
-      <h3>Web Game Design</h3>
+      <!-- <h3>Web Game Design</h3> -->
       </div>
 
     </div>
