--- a/mobile.html
+++ b/mobile.html
@@ -35,7 +35,7 @@
 
 <nav>
   <div class="logo">
-      <h4> Yinjian Huang </h4>
+      <h4> <a href="index.html"> Yinjian Huang </a> </h4>
     </div>
 <ul class="nav-link">
   <li>
@@ -69,16 +69,6 @@
 
  </main>
 
- <!-- <body>
-
-   <div class="floating-menu">
-
-     <a href="/css/">CSS</a>
-     <a href="/html/">HTML</a>
-     <a href="/coldfusion/">ColdFusion</a>
-     <a href="/database/">Database</a>
-   </div>
- </body> 
 
 
 
@@ -250,7 +240,7 @@ frameborder="0" allowfullscreen></iframe>
 <a href="index.html">All</a>
 <a href="mobile.html">iPad App</a>
 <a href="museum.html">Mobile App</a>
-<a href="#">Art Program</a>
+<a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
 
 </center>
 </div>
