--- a/museum.html
+++ b/museum.html
@@ -27,7 +27,7 @@
 
 <nav>
   <div class="logo">
-      <h4> Yinjian Huang </h4>
+      <h4> <a href="index.html"> Yinjian Huang </a></h4>
     </div>
 <ul class="nav-link">
   <li>
@@ -66,8 +66,8 @@
 <div>
 <h2> Analysis </h2>
   <h3>Problem </h3>
-<p> Every classroom is unique - in the types of students in the class, the lesson that they’re learning, and in what they’re interested in learning more about. When going to the museum, each trip should be catered to support and contextualize exactly what that class is learning at that moment in time. More often than not, however, trips to the museum are not facilitated in a way that provides students a bridge to formal learning. These trips are either guided tours by a museum educator, or unstructured time for students to explore the exhibits on their own. This results in students having fun in an environment that breaks up the monotony of sitting in class every day, but does not actually allow them to deeply relate what they’re learning in the museum to the concepts being covered in class.
-Given the amount of time and effort that it would take for a museum educator to work with teachers in customizing the experience for each class, it is unreasonable to expect that museum educators would be able to develop individualized lessons for each class visiting the museum. The lack of resources allocated to connecting these two parties makes it difficult to create a learning experience that truly contextualizes the museum experience in terms of the work being done in the classroom.
+<p> Every classroom is unique - in the types of students in the class, the lesson that they’re learning, and in what they’re interested in learning more about. When going to the museum, each trip should be catered to support and contextualize exactly what that class is learning at that moment in time. More often than not, <b>however, trips to the museum are not facilitated in a way that provides students a bridge to formal learning.</b> These trips are either guided tours by a museum educator, or unstructured time for students to explore the exhibits on their own. This results in students having fun in an environment that breaks up the monotony of sitting in class every day, but does not actually allow them to deeply relate what they’re learning in the museum to the concepts being covered in class. <br>
+Given the amount of time and effort that it would take for a museum educator to work with teachers in customizing the experience for each class, <b>it is unreasonable to expect that museum educators would be able to develop individualized lessons for each class visiting the museum.</b> The lack of resources allocated to connecting these two parties makes it difficult to create a learning experience that truly contextualizes the museum experience in terms of the work being done in the classroom.
 </p>
 </div><br>
 
@@ -75,15 +75,15 @@ Given the amount of time and effort that it would take for a museum educator to 
 <div id="box1">
 
 <img id="teachers" src="teacher.jpeg">
-<p> The target audience for this project are teachers grades from 6th to 8th grade. While other users can fall outside of this grade range, we have decided to focus on this demographic where students are still gaining foundational knowledge; whereas pre-6th grade students are still learning basic human skills (reading and writing), and post-8th grade students are learning in-depth concepts. </p>
+<p> <b>The target audience for this project are teachers grades from 6th to 8th grade.</b> While other users can fall outside of this grade range, we have decided to focus on this demographic where students are still gaining foundational knowledge; whereas pre-6th grade students are still learning basic human skills (reading and writing), and post-8th grade students are learning in-depth concepts. </p>
 
 </div><br>
 
 
   <h3> Goal of App </h3>
-  <p> The project aims to address the disconnect between formal classroom learning and informal learning that occurs during museum field trips. The goal is to provide a resource that allows them to easily contextualize museum artifacts in terms of what is being covered in the classroom at that time.<br>
+  <p> <b>The project aims to address the disconnect between formal classroom learning and informal learning that occurs during museum field trips. </b>The goal is to provide a resource that allows them to easily contextualize museum artifacts in terms of what is being covered in the classroom at that time.<br>
 
-Objectives<br>
+<strong>Objectives</strong><br>
 1. Learners will be able to create meaningful museum learning experiences. <br>
 2. Learners will be able to use an app to facilitate the process of developing a museum lesson that contextualizes in-class material. <br>
 3. Learners will transition from decontextualized museum tour field trips to app-based customized museum learning for their students. <br>
@@ -165,7 +165,7 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
 
 
     <h3> Evaluation </h3>
-    <p>The evaluation will be structured based on three parts, teachers' experience, students' experience, and delivery platform (for developer use).<br>
+    <p>The evaluation will be structured based on three parts, <b>teachers' experience, students' experience, and delivery platform (for developer use).</b><br>
       For the instructor, the app has its built-in function to collect data to support the learning environment better. The Exhibition Review page can help the instructor with ratings, review highlights, and reviews of the existing hunt route. Whether they chose to create their unique scavenger route or simply follow a success example, these will all be helpful information for the next user.<br>
       For the students, a page full of collections they found in the museum will be a rewarding experience after the hunt, just like an honor wall, this is also the learning material that helps them review what they have learned in the hunt. The number of collection they have, how many times a student click a collection, what is a students' preference when choosing a scavenger hunt can also help an instructor when organizing a hunt.<br>
 
@@ -181,7 +181,7 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
 <a href="index.html">All</a>
 <a href="mobile.html">iPad App</a>
 <a href="museum.html">Mobile App</a>
-<a href="#">Art Program</a>
+<a href="https://docs.google.com/document/d/1be5nAvS2PWi8yAuHVaV68bwHQSD59-pE7Y6YTnvBcSk/edit">Art Program</a>
 
 </center>
 </div>
