--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.google.com/specimen/Poppins" rel="stylesheet">
   <link href="https://fonts.google.com/specimen/Merienda" rel="stylesheet">
+  <link href="https://fonts.google.com/specimen/Satisfy" rel="stylesheet">
+
 
   <title>Main</title>
 
@@ -36,6 +38,9 @@
 </nav>
 
 <div class="projects">
+  <div class="container">
+
+<h2> Photographer </h2>
 
  <div id="photos">
    <ul id="photo-gallery">
@@ -91,29 +96,43 @@
 
      <p id="place4"> CHINA </p>
      <li>
+       <a href="IMG_1111.JPG">
+         <img src="IMG_1111.JPG">
+       </a>
+     </li>
+     <li>
        <a href="IMG_1110.JPG">
          <img src="IMG_1110.JPG">
        </a>
      </li>
      <li>
-       <a href="IMG_1112.JPG">
+       <a class="last" href="IMG_1112.JPG">
          <img src="IMG_1112.JPG">
-       </a>
+       </a
      </li>
-     <li>
-       <a href="IMG_1111.JPG">
-         <img src="IMG_1111.JPG">
-         </a>
-     </li>
-   </ul>
+   </ul><br>
+
  </div>
- </div>
+
+
+<h2> Video Producer </h2>
+<center><iframe class="youtube-video" width="830" height="470" src="https://www.youtube.com/embed/puh7XKhIOd4"
+
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<h2> Traveler</h2>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1zH5u_C92vbhtQZXSYRgGrgAc27guFRo5" width="830" height="630"></iframe>
+
+</center>
 
  <div class="navbar hide">
    <a href="index.html">Projects</a>
    <br>
    <a href="about.html">About</a>
  </div>
+  </div>
+</div>
 
  <script src="main.js"></script>
 
