--- a/mobile.html
+++ b/mobile.html
@@ -190,7 +190,7 @@
   <h5> Figma Version </h5>
   <iframe style="border: none;" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fhwgf9QahRVaYdonL5uvzyU%2FAgogos-Prototype%3Fnode-id%3D76%253A2%26scaling%3Dscale-down" allowfullscreen></iframe>
   <h5> Articulate 360 Version </h5>
-  <iframe src="story_html5.html" width="700" height="500"></iframe>
+  <iframe class="articulate" src="story_html5.html" width="700" height="500"></iframe>
 
 
 
