--- a/museum.html
+++ b/museum.html
@@ -31,10 +31,10 @@
     </div>
 <ul class="nav-link">
   <li>
-    <a href="#">Projects</a>
+    <a href="index.html">Projects</a>
     </li>
   <li>
-    <a href="#">About</a>
+    <a href="about.html">About</a>
     </li>
 </ul>
 <div class="burger">
