--- a/mobile.html
+++ b/mobile.html
@@ -23,8 +23,8 @@
 <link rel="stylesheet" href="custom2.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="http://malsup.github.com/jquery.cycle2.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://malsup.github.com/jquery.cycle2.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
