--- a/museum.html
+++ b/museum.html
@@ -106,7 +106,7 @@ Wilson (2006) discusses his 2002 model of information seeking as the “idea of 
 <h2> Design </h2>
 
 <h3> Storyboard </h3>
-<img id="storyboard" src="storyboard2.jpg" >
+<img id="storyboard" src="storyboard2.JPG" >
 
 <h3> Information Architecture </h3>
 <img id="information" src="information2.jpeg" >
