--- a/mobile.html
+++ b/mobile.html
@@ -27,6 +27,7 @@
 <script src="https://malsup.github.com/jquery.cycle2.js"></script>
 <script src="http://malsup.github.io/jquery.cycle2.center.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js"></script>
+<script src="path/to/your/copy/of/jquery.cycle2.carousel.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
