--- a/mobile.html
+++ b/mobile.html
@@ -23,11 +23,27 @@
 <link rel="stylesheet" href="custom2.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
 <script src="http://malsup.github.com/jquery.cycle2.js"></script>
-<script src="http://malsup.github.io/jquery.cycle2.center.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js"></script>
+<script src="https://malsup.github.com/jquery.cycle2.js"></script>
+
+<script src="https://malsup.github.io/jquery.cycle2.center.js"></script>
+<script src="https://malsup.github.io/jquery.cycle2.center.js"></script>
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
+
+</script>
 <script src="path/to/your/copy/of/jquery.cycle2.carousel.js"></script>
+
+<script
+  src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+</head>
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
