--- a/mobile.html
+++ b/mobile.html
@@ -219,7 +219,7 @@
     <h3> User Experience Journey </h3>
     <p> This video shows how Ben (one of the personas) uses this app to solve his problem through this app. </p>
 <iframe class="youtube-video" width="700" height="394"
-src="http://www.youtube.com/embed/asFa5wLkW5M "
+src="https://www.youtube.com/embed/asFa5wLkW5M "
 frameborder="0" allowfullscreen></iframe>
 </center>
 
