--- a/about.html
+++ b/about.html
@@ -126,14 +126,23 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 
 </center>
 
+
+</div>
+
+ </div>
+
+
  <div class="navbar hide">
    <a href="index.html">Projects</a>
    <br>
    <a href="about.html">About</a>
  </div>
-  </div>
-</div>
 
  <script src="main.js"></script>
 
+
+   <script
+     src="https://code.jquery.com/jquery-3.4.1.min.js"
+     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+     crossorigin="anonymous"></script>
  </body>
