--- a/mobile.html
+++ b/mobile.html
@@ -24,26 +24,26 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
-<script src="http://malsup.github.com/jquery.cycle2.js"></script>
+<!-- <script src="http://malsup.github.com/jquery.cycle2.js"></script> -->
 <script src="https://malsup.github.com/jquery.cycle2.js"></script>
 
-<script src="https://malsup.github.io/jquery.cycle2.center.js"></script>
+<!-- <script src="https://malsup.github.io/jquery.cycle2.center.js"></script> -->
 <script src="https://malsup.github.io/jquery.cycle2.center.js"></script>
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
-</script>
+<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
+</script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/plugin/jquery.cycle2.swipe.min.js">
 
 </script>
 <script src="path/to/your/copy/of/jquery.cycle2.carousel.js"></script>
 
-<script
-  src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
+<!-- <script
+  src="http://code.jquery.com/jquery-3.4.1.min.js"></script> -->
 
-</head>
+
 <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
@@ -70,7 +70,11 @@
   <div class="line3"></div>
 </div>
 
+
+
+
 </nav>
+
 
   <div class="projects">
 
@@ -278,6 +282,7 @@ frameborder="0" allowfullscreen></iframe>
 </div>
 
 </div>
+</div>
 
 <div class="navbar hide">
   <a href="index.html">Projects</a>
@@ -285,8 +290,9 @@ frameborder="0" allowfullscreen></iframe>
   <a href="about.html">About</a>
 </div>
 
-<script src="main.js"></script>
 
+
+<script src="main.js"></script>
 
 
 
