--- a/museum.html
+++ b/museum.html
@@ -189,6 +189,7 @@ src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.co
 </div>
 
 </div>
+</div>
 
 <div class="navbar hide">
   <a href="index.html">Projects</a>
